# deep-ice

./: .dockerignore  .env.template  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1079259bdec5_tables_cart_cartitems_orders_orderitems_.py  952a100dae1e_create_ice_cream_table.py  e3b369f89290_payment_order_statuses.py  ff861c79333d_preregistered_users.py
deep_ice/: __init__.py  main.py  models.py
deep_ice/api/: __init__.py  main.py
deep_ice/api/routes/: auth.py  cart.py  icecream.py  orders.py  payments.py
deep_ice/core/: __init__.py  config.py  database.py  dependencies.py  security.py
deep_ice/services/: cart.py  order.py  payment.py  stats.py  user.py
docs/: TODO.md  deployment.md  use-case.md
tests/: conftest.py  test_cart.py  test_icecream.py  test_orders.py  test_payment.py  test_payments.py
