[project]
name = "deep-ice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "greenlet>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "aiosqlite>=0.20.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.12.0",
    "pep8>=1.7.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "types-passlib>=1.7.7.20240819",
]
