[project]
name = "deep-ice"
version = "1.1.0"
description = "E-commerce platform selling ice cream"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "greenlet>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
    "arq>=0.26.1",
]

[tool.uv]
dev-dependencies = [
    "aiosqlite>=0.20.0",
    "black>=24.10.0",
    "flake8-pyproject>=1.2.3",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.12.0",
    "pep8>=1.7.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "types-passlib>=1.7.7.20240819",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.flake8]
# Check that this is aligned with your other tools like Black
max-line-length = 88
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
    "E203"
]

[tool.pycodestyle]
max-line-length = 88
